Fixed methods StreamPractice